--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,9 +15,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: clang++ text2table.cpp -o text2table
-    - name: Linter
-      run: clang-tidy text2table.cpp
+#    - name: Linter
+#      run: clang-tidy text2table.cpp
     - name: Linter (alt)
       uses: amcp-pit/cpp-linter@v1
     - name: Test
-      run: ./text2table tests/in/test1.txt out.txt && cmp out.txt tests/out/test1.txt
+      run: ./test
